force-app/main/default/objects/Leave_Applications__c/Leave_Applications__c.object-meta.xml
<CustomObject>
    <label>Leave Application</label>
    <nameField>
        <displayFormat>LA-{00000}</displayFormat>
        <label>Leave Application No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>