force-app/main/default/objects/Leave_Applications__c/fields/Employee_No__c.field-meta.xml
<CustomField>
    <fullName>Employee_No__c</fullName>
    <label>Employee No</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Leave Applications</relationshipLabel>
    <relationshipName>Leave_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>