force-app/main/default/objects/Leave_Applications__c/validationRules/Applied_Leaves_more_than_Total_Leaves.validationRule-meta.xml
<ValidationRule>
    <fullName>Applied_Leaves_more_than_Total_Leaves</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Days__c  &gt;  Employee_No__r.Total_Leaves__c</errorConditionFormula>
    <errorMessage>Applied Leaves cannot be more than total leaves available!!</errorMessage>
</ValidationRule>