force-app/main/default/objects/Leave_Applications__c/validationRules/To_date_less_than_From_date.validationRule-meta.xml
<ValidationRule>
    <fullName>To_date_less_than_From_date</fullName>
    <active>true</active>
    <errorConditionFormula>To__c &lt;  From__c</errorConditionFormula>
    <errorDisplayField>To__c</errorDisplayField>
    <errorMessage>To date cannot be less than From date!!</errorMessage>
</ValidationRule>